[gd_scene load_steps=3 format=3 uid="uid://d230w7fehs7tm"]

[ext_resource type="Script" uid="uid://dirohpxl5nfug" path="res://Scripts/hearts_ui.gd" id="1_c43fw"]
[ext_resource type="Texture2D" uid="uid://b3lnqro4sb5ub" path="res://assets/UI/Pixel Heart Animation GIFs & Spritesheets, 32x32 and 16x16/Pixel Heart Sprite Sheet 32x32.png" id="4_f1irx"]

[node name="HeartsUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c43fw")

[node name="Heart1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 157.0
offset_right = 270.0
offset_bottom = 189.0
scale = Vector2(3, 2.732)
texture = ExtResource("4_f1irx")

[node name="Heart2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 580.0
offset_top = 47.0
offset_right = 580.0
offset_bottom = 47.0
scale = Vector2(3, 2.732)

[node name="Heart3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 650.0
offset_top = 47.0
offset_right = 650.0
offset_bottom = 47.0
scale = Vector2(3, 2.732)
